fix: removed horizontal overflow issue

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -165,3 +165,6 @@ a.secondary {
     filter: invert();
   }
 }
+body{
+  overflow-x: hidden;
+}
